Fixed alignments

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -14,6 +14,10 @@
         position: relative;
     }
 
+    @media (min-width: 1600px) {
+        padding-right: 96px;
+    }
+
     &__three {
         height: 85vh;
         
@@ -41,7 +45,7 @@
             z-index: 2;
         }
 
-        @media (min-width: 1440px) {
+        @media (min-width: 1600px) {
             flex: 0 0 480px;
         }
     }
