--- a/src/scss/_window.scss
+++ b/src/scss/_window.scss
@@ -13,7 +13,8 @@
         z-index: 3;
     }
 
-    @media (min-width: 1440px) {
+    @media (min-width: 1600px) {
+        left: 96px;
         width: 480px;
     }
 
